@@ -1,3 +1,15 @@
+2010-01-25  Mario Carrion  <mcarrion@novell.com>
+
+	* ItemAutomationPeer.cs: Removed properties: RealItem and
+	RealItemsControlAutomationPeer. Fixed properties: Item and
+	ItemsControlAutomationPeer to match MS implementation.
+	* ItemsControlAutomationPeer.cs: Private method added: GetItem, used
+	to get the children using internal method or indexer.
+	* SelectorItemAutomationPeer.cs: Property removed:
+	RealItemsControlAutomationPeer, not needed.
+
+	r: alan
+
 2010-01-08  Mario Carrion  <mcarrion@novell.com>
 
 	* FrameworkElementAutomationPeer.cs: Fixes Bug #568627: IsOffscreen
